--- a/composer.json
+++ b/composer.json
@@ -15,11 +15,15 @@
         "email": "allure@yandex-team.ru",
         "source": "https://github.com/allure-framework/allure-phpunit"
     },
+    "repositories": [{
+        "type": "vcs",
+        "url": "https://github.com/techhemant/allure-php-commons"
+    }],
     "require": {
 	    "php": ">=7.1.0",
         "phpunit/phpunit": ">=7.0.0",
         "mikey179/vfsStream": "1.*",
-        "allure-framework/allure-php-api": "~1.1.0"
+        "allure-framework/allure-php-api": "dev-add_group_support"
     },
     "autoload": {
         "psr-0": {
